# wagner_jr_embarcatech_HBr_2025

./: README.md
atividades/Contadorr/: CMakeLists.txt  Contadorr.c  README  README.md
atividades/Contadorr/src/: ssd1306_i2c.c
atividades/adc_unity/: CMakeLists.txt  adc_unity.c  readme.md
atividades/adc_unity/src/: adc_to_celsius.c  adc_to_celsius.h  test_adc_to_celsius.c  unity.h  unity_internals.h
atividades/arq_modular/: CMakeLists.txt
atividades/arq_modular/app/: arq_modular.c
atividades/arq_modular/drivers/: led_embutido.c
atividades/arq_modular/hal/: hal_led.c
atividades/arq_modular/include/: hal_led.h  led_embutido.h
atividades/joystick_read/: CMakeLists.txt  README.md  joystick_read.c
atividades/temperatura_adc/: CMakeLists.txt  README.md  temperatura_adc.c
projetos/bitdoglab_checkin_c/: CMakeLists.txt  README.md  board_config.h  checkin.c  lwipopts.h
projetos/bitdoglab_checkin_c/dhcpserver/: dhcpserver.c
projetos/bitdoglab_checkin_c/dnsserver/: dnsserver.c  dnsserver.h
projetos/bitdoglab_checkin_c/inc/: ssd1306.h  ssd1306_font.h
projetos/bitdoglab_checkin_c/src/: ssd1306_i2c.c
projetos/galton_board/: CMakeLists.txt  README.md  galton_board.c
projetos/galton_board/src/: ssd1306_i2c.h
